--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: RDP Setup with User Files
+name: RDP Setup with User Files (no sleep)
 
 on:
   workflow_dispatch:
@@ -8,75 +8,104 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        session: [1,2,3]  # 6 parallel sessions
+        session: [1,2,3,4,5,6]  # 6 parallel sessions
     timeout-minutes: 3600
 
     steps:
-      # Step 1: Checkout repository (so files are accessible)
+      # 1) Checkout repository so files are available
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Step 2: Enable RDP + Firewall + Prevent Disconnects
+      # 2) Enable RDP + firewall
       - name: Enable RDP + Firewall
+        shell: powershell
         run: |
-          # Enable RDP
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "UserAuthentication" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -Name "SecurityLayer" -Value 0 -Force
-
-          # Allow RDP through firewall
           netsh advfirewall firewall delete rule name="AllowRDP" >$null 2>&1
           netsh advfirewall firewall add rule name="AllowRDP" dir=in action=allow protocol=TCP localport=3389
 
-      # Step 3: Create RDP user
-      - name: Create RDP User
+      # 3) Create RDP user (temporarily disable password complexity so "1234" works)
+      - name: Create RDP User (Password = 1234)
+        shell: powershell
         run: |
-          $username = "RDP$(${{ matrix.session }})"
-          $password = "1234"
-          $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-          if (Get-LocalUser -Name $username -ErrorAction SilentlyContinue) { Remove-LocalUser -Name $username }
+          # Export and modify local security policy to allow weak password
+          $cfg = "$env:TEMP\secpol.cfg"
+          secedit /export /cfg $cfg
 
-          New-LocalUser -Name $username -Password $securePass -AccountNeverExpires
+          $content = Get-Content $cfg -Raw
+          if ($content -match 'PasswordComplexity\s*=') {
+            $content = $content -replace 'PasswordComplexity\s*=\s*\d','PasswordComplexity = 0'
+          } else {
+            $content += "`r`nPasswordComplexity = 0"
+          }
+          $content | Set-Content $cfg -Force
+          secedit /configure /db $env:windir\security\local.sdb /cfg $cfg /areas SECURITYPOLICY
+          gpupdate /force
+
+          # Build username from matrix value
+          $username = "RDP${{ matrix.session }}"
+          $password = "1234"
+
+          Write-Host "Creating user: $username"
+          $securePass = ConvertTo-SecureString $password -AsPlainText -Force
+
+          if (Get-LocalUser -Name $username -ErrorAction SilentlyContinue) {
+            Write-Host "Removing existing user $username"
+            Remove-LocalUser -Name $username -ErrorAction SilentlyContinue
+          }
+
+          New-LocalUser -Name $username -Password $securePass -AccountNeverExpires -PasswordNeverExpires
           Add-LocalGroupMember -Group "Administrators" -Member $username
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member $username
 
-          echo "RDP_CREDS=User: $username | Password: $password" >> $env:GITHUB_ENV
+          echo "RDP_USER=$username" >> $env:GITHUB_ENV
+          echo "RDP_PASS=$password" >> $env:GITHUB_ENV
 
-      # Step 4: Install Python dependencies
+      # 4) Install Python dependencies and Playwright browsers
       - name: Install Python Dependencies
+        shell: powershell
         run: |
           python -m pip install --upgrade pip
           pip install PyQt5 playwright requests
           playwright install
 
-      # Step 5: Copy repository files to each user's Downloads folder
+      # 5) Copy required repository files to each user's Downloads\NewFolder
       - name: Setup User Files
+        shell: powershell
         run: |
-          $username = "RDP$(${{ matrix.session }})"
+          $username = "RDP${{ matrix.session }}"
           $userProfile = "C:\Users\$username"
           $downloadFolder = Join-Path $userProfile "Downloads\NewFolder"
-          if (-not (Test-Path $downloadFolder)) { New-Item -ItemType Directory -Path $downloadFolder -Force }
-
-          # Copy files from repository (prox.txt, rpa.json, useragent.txt, humanex.py)
-          $repoFolder = "${{ github.workspace }}"
-          Copy-Item -Path (Join-Path $repoFolder "prox.txt") -Destination $downloadFolder -Force
-          Copy-Item -Path (Join-Path $repoFolder "rpa.json") -Destination $downloadFolder -Force
-          Copy-Item -Path (Join-Path $repoFolder "useragent.txt") -Destination $downloadFolder -Force
-          Copy-Item -Path (Join-Path $repoFolder "humanex.py") -Destination $downloadFolder -Force
-
-      # Step 6: Keep Session Alive
-      - name: Keep Session Alive
-        run: |
-          $username = "RDP$(${{ matrix.session }})"
-          $tsIP = "N/A (RDP ready)"
-          Write-Host "`n=== RDP ACCESS ==="
-          Write-Host "Username: $username"
-          Write-Host "Password: 1234"
-          Write-Host "Downloads Folder: C:\Users\$username\Downloads\NewFolder"
-          Write-Host "Files: prox.txt, rpa.json, useragent.txt, humanex.py"
-          Write-Host "==================`n"
-
-          while ($true) {
-            Write-Host "[$(Get-Date)] RDP$(${{ matrix.session }}) Active"
-            Start-Sleep -Seconds 300
+          if (-not (Test-Path $downloadFolder)) {
+            New-Item -ItemType Directory -Path $downloadFolder -Force | Out-Null
           }
+
+          $repoFolder = "${{ github.workspace }}"
+
+          # Copy files if they exist in the repo; if missing, write a warning file so you see it
+          $files = @("prox.txt","rpa.json","useragent.txt","humanex.py")
+          foreach ($f in $files) {
+            $src = Join-Path $repoFolder $f
+            if (Test-Path $src) {
+              Copy-Item -Path $src -Destination $downloadFolder -Force
+            } else {
+              "MISSING: $f" | Out-File -FilePath (Join-Path $downloadFolder "MISSING_$f.txt")
+            }
+          }
+
+      # 6) Print session info (no sleep) — workflow will finish after this step
+      - name: Print RDP Info (workflow will finish)
+        shell: powershell
+        run: |
+          $username = $env:RDP_USER
+          $password = $env:RDP_PASS
+          $folder = "C:\Users\$username\Downloads\NewFolder"
+          Write-Host "======================================"
+          Write-Host "Session: ${{ matrix.session }}"
+          Write-Host "Username: $username"
+          Write-Host "Password: $password"
+          Write-Host "Files copied to: $folder"
+          Write-Host "Note: Runner will be destroyed when the workflow completes — RDP will NOT persist."
+          Write-Host "======================================"
