--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: RDP Setup with User Files (6 parallel sessions)
+name: RDP Setup with Files (6 parallel sessions)
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        session: [1,2,3]  # 6 parallel sessions
+        session: [1,2,3]
     timeout-minutes: 3600
 
     steps:
@@ -26,36 +26,22 @@ jobs:
           netsh advfirewall firewall delete rule name="AllowRDP" >$null 2>&1
           netsh advfirewall firewall add rule name="AllowRDP" dir=in action=allow protocol=TCP localport=3389
 
-      # 3) Create RDP User (Password = 1234)
+      # 3) Create RDP User
       - name: Create RDP User
         shell: powershell
         run: |
-          # Disable password complexity temporarily
+          # Allow weak password
           $cfg = "$env:TEMP\secpol.cfg"
           secedit /export /cfg $cfg
-
-          $content = Get-Content $cfg -Raw
-          if ($content -match 'PasswordComplexity\s*=') {
-            $content = $content -replace 'PasswordComplexity\s*=\s*\d','PasswordComplexity = 0'
-          } else {
-            $content += "`r`nPasswordComplexity = 0"
-          }
-          $content | Set-Content $cfg -Force
+          (Get-Content $cfg) -replace 'PasswordComplexity\s*=\s*\d','PasswordComplexity = 0' | Set-Content $cfg
           secedit /configure /db $env:windir\security\local.sdb /cfg $cfg /areas SECURITYPOLICY
           gpupdate /force
 
-          # Create user with matrix session number
+          # Create user
           $username = "RDP${{ matrix.session }}"
           $password = "1234"
-
-          Write-Host "Creating user: $username"
+          if (Get-LocalUser -Name $username -ErrorAction SilentlyContinue) { Remove-LocalUser -Name $username }
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-
-          if (Get-LocalUser -Name $username -ErrorAction SilentlyContinue) {
-            Write-Host "Removing existing user $username"
-            Remove-LocalUser -Name $username -ErrorAction SilentlyContinue
-          }
-
           New-LocalUser -Name $username -Password $securePass -AccountNeverExpires -PasswordNeverExpires
           Add-LocalGroupMember -Group "Administrators" -Member $username
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member $username
@@ -63,35 +49,41 @@ jobs:
           echo "RDP_USER=$username" >> $env:GITHUB_ENV
           echo "RDP_PASS=$password" >> $env:GITHUB_ENV
 
-      # 4) Install Python dependencies
-      - name: Install Python Dependencies
+      # 4) Install Python dependencies (separate run blocks to avoid cancellation)
+      - name: Upgrade pip
+        shell: powershell
+        run: python -m pip install --upgrade pip
+
+      - name: Install PyQt5
+        shell: powershell
+        run: pip install PyQt5
+
+      - name: Install Playwright
         shell: powershell
         run: |
-          python -m pip install --upgrade pip
-          pip install PyQt5 playwright requests
+          pip install playwright
           playwright install
 
-      # 5) Copy repository files to each user's Downloads\NewFolder
+      - name: Install Requests
+        shell: powershell
+        run: pip install requests
+
+      # 5) Copy repository files to user Downloads\NewFolder
       - name: Setup User Files
         shell: powershell
         run: |
           $username = $env:RDP_USER
-          $userProfile = "C:\Users\$username"
-          $downloadFolder = Join-Path $userProfile "Downloads\NewFolder"
-          if (-not (Test-Path $downloadFolder)) { New-Item -ItemType Directory -Path $downloadFolder -Force | Out-Null }
+          $userFolder = "C:\Users\$username\Downloads\NewFolder"
+          if (-not (Test-Path $userFolder)) { New-Item -ItemType Directory -Path $userFolder -Force | Out-Null }
 
-          $repoFolder = "${{ github.workspace }}"
+          $repo = "${{ github.workspace }}"
           $files = @("prox.txt","rpa.json","useragent.txt","humanex.py")
           foreach ($f in $files) {
-            $src = Join-Path $repoFolder $f
-            if (Test-Path $src) {
-              Copy-Item -Path $src -Destination $downloadFolder -Force
-            } else {
-              "MISSING: $f" | Out-File -FilePath (Join-Path $downloadFolder "MISSING_$f.txt")
-            }
+            $src = Join-Path $repo $f
+            if (Test-Path $src) { Copy-Item -Path $src -Destination $userFolder -Force }
           }
 
-      # 6) Print session info (workflow will finish)
+      # 6) Print RDP Info safely
       - name: Print RDP Info
         shell: powershell
         run: |
@@ -103,5 +95,5 @@ jobs:
           Write-Host ("Username: {0}" -f $username)
           Write-Host ("Password: {0}" -f $password)
           Write-Host ("Files copied to: {0}" -f $folder)
-          Write-Host "Note: Runner will be destroyed when workflow completes — RDP will NOT persist."
+          Write-Host "Note: Runner is temporary — RDP session disappears when workflow finishes."
           Write-Host "======================================"
