--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           echo "RDP_USER=$username" >> $env:GITHUB_ENV
           echo "RDP_PASS=$password" >> $env:GITHUB_ENV
 
-      # 4) Install Python dependencies (separate run blocks to avoid cancellation)
+      # 4) Install Python dependencies
       - name: Upgrade pip
         shell: powershell
         run: python -m pip install --upgrade pip
